2021-12-23  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][a11y] WTR: add missing bool and string attribute values with ATSPI
        https://bugs.webkit.org/show_bug.cgi?id=234599

        Reviewed by Adrian Perez de Castro.

        * WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
        (WTR::checkElementState):
        (WTR::AccessibilityUIElement::stringAttributeValue):
        (WTR::AccessibilityUIElement::boolAttributeValue):

2021-12-23  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][a11y] WTR: ensure the root object is created before getting the focused element with ATSPI
        https://bugs.webkit.org/show_bug.cgi?id=234597

        Reviewed by Adrian Perez de Castro.

        This is causing some tests to fail when executed in the same web process after another test.

        * WebKitTestRunner/InjectedBundle/atspi/AccessibilityControllerAtspi.cpp:
        (WTR::AccessibilityController::focusedElement):

2021-12-23  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][a11y] WTR: add support for notifications when building with ATSPI
        https://bugs.webkit.org/show_bug.cgi?id=234550

        Reviewed by Adrian Perez de Castro.

        Add AccessibilityNotificationHandler class to handle the ATSPI notifications.

        * WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:
        * WebKitTestRunner/InjectedBundle/AccessibilityController.h:
        * WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
        * WebKitTestRunner/InjectedBundle/atspi/AccessibilityControllerAtspi.cpp:
        (WTR::AccessibilityController::resetToConsistentState): Remove the global event listener if there's one active.
        (WTR::AccessibilityController::addNotificationListener): Create a global event listener.
        (WTR::AccessibilityController::removeNotificationListener): Remove the global event listener.