@@ -1,5 +1,17 @@
 2021-12-23  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        [GTK][a11y] WTR: handle missing cases in isAttributeSettable with ATSPI
+        https://bugs.webkit.org/show_bug.cgi?id=234601
+
+        Reviewed by Adrian Perez de Castro.
+
+        We need to handle aria-readonly attribute and the combobox and listbox elements.
+
+        * WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
+        (WTR::AccessibilityUIElement::isAttributeSettable):
+
+2021-12-23  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         [GTK][a11y] WTR: add missing bool and string attribute values with ATSPI
         https://bugs.webkit.org/show_bug.cgi?id=234599
 
